# ComfyUI_DW_Chat

./: LICENSE  PaliGemmaPixelProse.py  README.md  SD3LongCaptioner.py  SD3LongCaptioner_v2.py  __init__.py  api_key.ini.example.ini  api_utils.py  config.json  dwimage2.py  execution_time.py  file_based_chat.py  gemini_flux_prompt.py  gropchat.py  groqchat.py  moonshot_chat_nodes.py  ollama_prompt_extractor.py  prompt_extractor.py  pyproject.toml  requirements.txt  sdprompt_agent.py
nodes/: FluxPromptEngineeringNode.py  PaliGemma3bCaptioner.py  PromptEngineeringNode.py  Qwen2VLCaption.py  Qwen2VLLocalCaption.py  SD3LongCaptioner_v2.py  deepseek_chat.py  deepseek_translater.py  dwimage2.py  error_log.py  execution_time.py  file_based_chat.py  gemini_flash.py  gemini_flux_prompt.py  gemma2prompt.py  gemma_node.py  gemma_translation.py  github_link_node.js  github_link_node.py  groqchat.py  moonshot_chat_nodes.py  ollama_nodes.py  ollama_prompt_extractor.py  prompt_extractor.py  sdprompt_agent.py
web/: executionTime.js  github_link_node.js
